# secureshare

backend/: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/migrations/: 20250528001343_tables.sql
backend/src/: config.rs  models.rs
