[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tower = "0.5.0"
time = "0.3.20"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing-subscriber = "0.3.19"
aes = "0.8.4"
block-modes = "0.9.1"
rsa = "0.9.8"
rand = "0.9.1"
base64 = "0.22.1"

